<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.famsoft.adb.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/articulo"
        android:id="@+id/lblArticulo"
        android:layout_row="0"
        android:layout_column="0" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtArticulo"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="textAutoComplete|textAutoCorrect|text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:id="@+id/lblDescripcion"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtDescripcion"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="textAutoComplete|textAutoCorrect|text|textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie"
        android:id="@+id/lblSerie"
        android:layout_row="2"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSerie"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="text"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:id="@+id/btnAgregar"
        android:layout_row="3"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:id="@+id/btnActualizar"
        android:layout_row="3"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:id="@+id/btnEliminar"
        android:layout_row="3"
        android:layout_column="2" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gvArticulos"
        android:layout_row="4"
        android:layout_column="0"
        android:clickable="true"
        android:choiceMode="singleChoice"
        android:layout_columnSpan="3"
        android:numColumns="3" />

</GridLayout>
